Updated to work with ESP8266

--- a/library.properties
+++ b/library.properties
@@ -5,5 +5,5 @@ maintainer=Cody <codysorgenfrey@gmail.com>
 sentence=An easy to use.
 paragraph=This library provides a simple way to.
 url=https://bitbucket.org/codysorgenfrey/sheets_logger_esp
-architectures=esp32
+architectures=esp32,esp8266
 includes=SheetsLogger.h
